slack-first/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-first
spec:
  selector:
    app: slack-first
  type: ClusterIP
  ports:
    - name: events
      port: 3000
      targetPort: 3000
      protocol: TCP
